refactor: migrate plugin GoPlusSecurity

--- a/packages/plugins/GoPlusSecurity/src/locale/ja-JP.json
+++ b/packages/plugins/GoPlusSecurity/src/locale/ja-JP.json
@@ -1,1 +1,45 @@
-{ "messages": {} }
+{
+    "messages": {
+        "KAS4UW": [["0"], " 注意要因"],
+        "WeNxrL": [["0"], " 注意要因"],
+        "8MJFvR": [["0"], " リスク要因"],
+        "GWMpIa": [["0"], " リスク要因"],
+        "S62wAI": "1. ネットワークが動作していることを確認してください。",
+        "+VKHly": "2. チェーンネットワークまたはトークンアドレスが正しいか確認してください。",
+        "aLSba9": "3. トークンアドレスは現在カバーされていません。コントラクト情報を再度取得するには60秒以上かかる場合があります。後でお試しください。",
+        "dEgA5A": "キャンセル",
+        "gUuuBi": "セキュリティを確認",
+        "o9Wh6v": "確認ボタンをクリックすると、潜在的なリスクを取ることに同意し、取引を進めることになります。",
+        "A+Ijr2": "[セキュリティチェック] を閉じますか？",
+        "7VpPHA": "確認",
+        "0dFHbr": "スワップリスクの確認",
+        "cvCD4e": "コントラクト作成者",
+        "p1/7GX": "コントラクトが見つかりません",
+        "6ulv1U": "コントラクト所有者",
+        "zXagFp": "アドレスをコピー",
+        "r7rNZk": "ユーザーの皆様",
+        "D71EGW": "Go+",
+        "0yPSCj": "高リスク",
+        "n2HnVK": "「セキュリティチェック」を閉じますと、不審なブラックリストに登録され、不正な契約書やアドレスとやりとりする際に、セキュリティに関する通知が表示されなくなります。",
+        "5N3b5J": "時価総額",
+        "/giXwU": "中程度のリスク",
+        "EMLHjH": "詳細情報",
+        "6VJnE7": "注意: 詐欺行為の検出は100%保証されない場合があります.",
+        "Iu4Ja9": "トークンコントラクトのアドレスを入力してください。",
+        "g2UNkE": "以下により提供されています",
+        "AkfEpj": "結果が見つかりません。チェーンネットワークエラー、オンチェーンデータ異常、トークンアドレスがカバーされていない可能性があります。以下のように確認してください：",
+        "ByAMF+": "リスク警告",
+        "A1taO8": "検索",
+        "Ah4d0u": "セキュリティの検出",
+        "es4h+b": "とにかくスワップ",
+        "sOYKMU": "format@@0 dAppは、迅速で信頼性の高い便利なWeb3セキュリティサービスを提供します。",
+        "8N1Wbf": "このトークンにはリスクや注意すべき要因はありません。",
+        "HCKlXm": "トークンコントラクトアドレス",
+        "daEP1M": "トークン情報",
+        "jJrqb1": "トークン名",
+        "pzO3Xa": "総供給",
+        "MEIAzV": "名前なし",
+        "Sjplg3": "エクスプローラーで表示",
+        "UpqenY": "We recommend new Web3 users to keep [Check Security] open."
+    }
+}
