--- a/packages/plugins/GoPlusSecurity/src/locale/ko-KR.json
+++ b/packages/plugins/GoPlusSecurity/src/locale/ko-KR.json
@@ -1,1 +1,45 @@
-{ "messages": {} }
+{
+    "messages": {
+        "KAS4UW": [["0"], " 주의 인자"],
+        "WeNxrL": [["0"], " 주의 인자"],
+        "8MJFvR": [["0"], " 리스크 인자"],
+        "GWMpIa": [["0"], " 리스크 인자"],
+        "S62wAI": "1. 네트워크가 작동하는지 확인합니다;",
+        "+VKHly": "2. 체인 네트워크 또는 토큰 주소가 올바른지 확인합니다;",
+        "aLSba9": "3. 토큰 주소는 지금 적용되지 않습니다. 컨트랙트 정보를 다시 받으려면 60초 이상 걸릴 수 있습니다. 나중에 다시 사용해보세요.",
+        "dEgA5A": "취소",
+        "gUuuBi": "보안 확인",
+        "o9Wh6v": "확인 버튼을 클릭하면 잠재적 위험을 감수하고 거래를 진행하는 데 동의한다는 말입니다.",
+        "A+Ijr2": "[Check Security] 닫기",
+        "7VpPHA": "확인",
+        "0dFHbr": "스왑 리스크 확인",
+        "cvCD4e": "컨트랙트 창조자",
+        "p1/7GX": "캔트랙트 찾지 않음",
+        "6ulv1U": "컨트랙트 소유자",
+        "zXagFp": "주소 복사",
+        "r7rNZk": "안녕하세요 유저님,",
+        "D71EGW": "Go+",
+        "0yPSCj": "높은 리스크",
+        "n2HnVK": "[Check Security] 닫기로 결정한 경우 의심스럽거나 블랙리스트에 있거나 사기 가능성이 있는 컨트랙트 및 주소와 상호 작용할 때 보안 알림이 더 이상 표시되지 않습니다.",
+        "5N3b5J": "시가 총액",
+        "/giXwU": "중간 리스크",
+        "EMLHjH": "상세 정보",
+        "6VJnE7": "참고: 스캠 탐지가 100% 보장되지 않을 수 있습니다.",
+        "Iu4Ja9": "토큰 컨트랙트 주소를 입력하세요.",
+        "g2UNkE": "Powered by",
+        "AkfEpj": "지금 결과를 찾을 수 없습니다. 체인 네트워크 오류일 수도 있고, 온체인 데이터가 비정상적이거나 토큰 주소가 지금 적용되지 않을 수도 있습니다. 다음과 같이 확인하십시오:",
+        "ByAMF+": "리스크 경고",
+        "A1taO8": "검색",
+        "Ah4d0u": "보안 탐지",
+        "es4h+b": "계속 스왑",
+        "sOYKMU": "[Check Security] dApp은 빠르고, 신뢰할 수 있는 웹3 보안 서비스를 제공합니다.",
+        "8N1Wbf": "이 토큰에는 위험 요소나 주의 요소가 없습니다.",
+        "HCKlXm": "토큰 컨트랙트 주소",
+        "daEP1M": "토큰 정보",
+        "jJrqb1": "토큰 이름",
+        "pzO3Xa": "토큰 공급량",
+        "MEIAzV": "이름없음",
+        "Sjplg3": "Explorer에서 보기",
+        "UpqenY": "We recommend new Web3 users to keep [Check Security] open."
+    }
+}
