--- a/packages/plugins/GoPlusSecurity/src/locale/ko-KR.po
+++ b/packages/plugins/GoPlusSecurity/src/locale/ko-KR.po
@@ -17,3 +17,170 @@ msgstr ""
 "X-Crowdin-Language: ko\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/GoPlusSecurity/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 970\n"
+
+#: src/SiteAdaptor/components/SecurityPanel.tsx:196
+msgid "{0} Attention factor"
+msgstr "{0} 주의 인자"
+
+#: src/SiteAdaptor/components/SecurityPanel.tsx:195
+msgid "{0} Attention factors"
+msgstr "{0} 주의 인자"
+
+#: src/SiteAdaptor/components/SecurityPanel.tsx:186
+msgid "{0} Risky factor"
+msgstr "{0} 리스크 인자"
+
+#: src/SiteAdaptor/components/SecurityPanel.tsx:185
+msgid "{0} Risky factors"
+msgstr "{0} 리스크 인자"
+
+#: src/SiteAdaptor/components/NotFound.tsx:15
+msgid "1. Make sure network is working;"
+msgstr "1. 네트워크가 작동하는지 확인합니다;"
+
+#: src/SiteAdaptor/components/NotFound.tsx:18
+msgid "2. Make sure the chain network or token address is correct;"
+msgstr "2. 체인 네트워크 또는 토큰 주소가 올바른지 확인합니다;"
+
+#: src/SiteAdaptor/components/NotFound.tsx:21
+msgid "3. Token address is not covered now, it might take more than 60s to get contract information again. Please try it later."
+msgstr "3. 토큰 주소는 지금 적용되지 않습니다. 컨트랙트 정보를 다시 받으려면 60초 이상 걸릴 수 있습니다. 나중에 다시 사용해보세요."
+
+#: src/SiteAdaptor/components/CheckSecurityConfirmDialog.tsx:74
+#: src/SiteAdaptor/components/RiskWarningDialog.tsx:135
+msgid "Cancel"
+msgstr "취소"
+
+#: src/SiteAdaptor/CheckSecurityDialog.tsx:75
+#: src/SiteAdaptor/index.tsx:23
+msgid "Check Security"
+msgstr "보안 확인"
+
+#: src/SiteAdaptor/components/RiskWarningDialog.tsx:106
+msgid "Clicking the confirm button means that you agree to take the potential risks and proceed with the transaction."
+msgstr "확인 버튼을 클릭하면 잠재적 위험을 감수하고 거래를 진행하는 데 동의한다는 말입니다."
+
+#: src/SiteAdaptor/components/CheckSecurityConfirmDialog.tsx:47
+msgid "Close [Check Security]?"
+msgstr "[Check Security] 닫기"
+
+#: src/SiteAdaptor/components/CheckSecurityConfirmDialog.tsx:71
+msgid "Confirm"
+msgstr "확인"
+
+#: src/SiteAdaptor/components/RiskWarningDialog.tsx:93
+#: src/UI/TokenSecurityBoundary.tsx:45
+msgid "Confirm swap risk"
+msgstr "스왑 리스크 확인"
+
+#: src/SiteAdaptor/components/TokenPanel.tsx:79
+msgid "Contract Creator"
+msgstr "컨트랙트 창조자"
+
+#: src/SiteAdaptor/CheckSecurityDialog.tsx:56
+msgid "Contract Not Found"
+msgstr "캔트랙트 찾지 않음"
+
+#: src/SiteAdaptor/components/TokenPanel.tsx:105
+msgid "Contract Owner"
+msgstr "컨트랙트 소유자"
+
+#: src/SiteAdaptor/components/RiskWarningDialog.tsx:116
+msgid "Copy Address"
+msgstr "주소 복사"
+
+#: src/SiteAdaptor/components/RiskWarningDialog.tsx:103
+msgid "Dear Users,"
+msgstr "안녕하세요 유저님,"
+
+#: src/SiteAdaptor/components/Footer.tsx:24
+msgid "Go+"
+msgstr "Go+"
+
+#: src/SiteAdaptor/components/SecurityPanel.tsx:139
+msgid "High Risk"
+msgstr "높은 리스크"
+
+#: src/SiteAdaptor/components/CheckSecurityConfirmDialog.tsx:55
+msgid "If you decide to close [Check Security], you will no longer see security notifications when interacting with suspicious, blacklisted, or potentially fraudulent contracts and addresses."
+msgstr "[Check Security] 닫기로 결정한 경우 의심스럽거나 블랙리스트에 있거나 사기 가능성이 있는 컨트랙트 및 주소와 상호 작용할 때 보안 알림이 더 이상 표시되지 않습니다."
+
+#: src/SiteAdaptor/components/TokenPanel.tsx:137
+msgid "Market Cap"
+msgstr "시가 총액"
+
+#: src/SiteAdaptor/components/SecurityPanel.tsx:140
+msgid "Medium Risk"
+msgstr "중간 리스크"
+
+#: src/SiteAdaptor/components/SecurityPanel.tsx:159
+msgid "More Details"
+msgstr "상세 정보"
+
+#: src/SiteAdaptor/components/DefaultPlaceholder.tsx:13
+msgid "Note: Scams detections might not be 100% guaranteed."
+msgstr "참고: 스캠 탐지가 100% 보장되지 않을 수 있습니다."
+
+#: src/SiteAdaptor/components/SearchBox.tsx:115
+msgid "Please enter token contract address."
+msgstr "토큰 컨트랙트 주소를 입력하세요."
+
+#: src/SiteAdaptor/components/Footer.tsx:17
+msgid "Powered by"
+msgstr "Powered by"
+
+#: src/SiteAdaptor/components/NotFound.tsx:9
+msgid "Results not found now. it might be chain network error, on-chain data abnormal or the token address is not covered now. please check as followings:"
+msgstr "지금 결과를 찾을 수 없습니다. 체인 네트워크 오류일 수도 있고, 온체인 데이터가 비정상적이거나 토큰 주소가 지금 적용되지 않을 수도 있습니다. 다음과 같이 확인하십시오:"
+
+#: src/SiteAdaptor/components/RiskWarningDialog.tsx:98
+msgid "Risk Warning"
+msgstr "리스크 경고"
+
+#: src/SiteAdaptor/components/SearchBox.tsx:138
+msgid "Search"
+msgstr "검색"
+
+#: src/SiteAdaptor/components/SecurityPanel.tsx:177
+msgid "Security Detection"
+msgstr "보안 탐지"
+
+#: src/SiteAdaptor/components/RiskWarningDialog.tsx:138
+msgid "Swap Anyway"
+msgstr "계속 스왑"
+
+#: src/SiteAdaptor/components/CheckSecurityConfirmDialog.tsx:50
+msgid "The [Check Security] dApp provides quick, reliable, and convenient Web3 security services."
+msgstr "[Check Security] dApp은 빠르고, 신뢰할 수 있는 웹3 보안 서비스를 제공합니다."
+
+#: src/SiteAdaptor/components/SecurityPanel.tsx:209
+msgid "This token has no risky or attention factors."
+msgstr "이 토큰에는 위험 요소나 주의 요소가 없습니다."
+
+#: src/SiteAdaptor/components/TokenPanel.tsx:58
+msgid "Token Contract Address"
+msgstr "토큰 컨트랙트 주소"
+
+#: src/SiteAdaptor/components/SecurityPanel.tsx:150
+msgid "Token info"
+msgstr "토큰 정보"
+
+#: src/SiteAdaptor/components/TokenPanel.tsx:49
+msgid "Token Name"
+msgstr "토큰 이름"
+
+#: src/SiteAdaptor/components/TokenPanel.tsx:129
+msgid "Total Supply"
+msgstr "토큰 공급량"
+
+#: src/SiteAdaptor/components/SecurityPanel.tsx:107
+msgid "Unnamed"
+msgstr "이름없음"
+
+#: src/SiteAdaptor/components/RiskWarningDialog.tsx:126
+msgid "View on Explorer"
+msgstr "Explorer에서 보기"
+
+#: src/SiteAdaptor/components/CheckSecurityConfirmDialog.tsx:61
+msgid "We recommend new Web3 users to keep [Check Security] open."
+msgstr ""
