--- a/packages/plugins/GoPlusSecurity/src/locale/zh-TW.json
+++ b/packages/plugins/GoPlusSecurity/src/locale/zh-TW.json
@@ -1,1 +1,45 @@
-{ "messages": {} }
+{
+    "messages": {
+        "KAS4UW": [["0"], " 个需要关注的因素"],
+        "WeNxrL": [["0"], " 个需要关注的因素"],
+        "8MJFvR": [["0"], " 个有风险的因素"],
+        "GWMpIa": [["0"], " 个有风险的因素"],
+        "S62wAI": "1. 确保网络正常运作；",
+        "+VKHly": "2. 确认网络 和 Token 地址是否正确；",
+        "aLSba9": "3. Token 地址现在没有被覆盖，可能需要超过60秒才能再次获取合约信息。请稍后再试。",
+        "dEgA5A": "取消",
+        "gUuuBi": "安全检查",
+        "o9Wh6v": "点击确认按钮意味着您同意承担潜在的风险并选择继续进行交易。",
+        "A+Ijr2": "关闭[检查安全]？",
+        "7VpPHA": "确定",
+        "0dFHbr": "确认兑换风险",
+        "cvCD4e": "合约创建者",
+        "p1/7GX": "未找到合约",
+        "6ulv1U": "合同所有者",
+        "zXagFp": "复制地址",
+        "r7rNZk": "尊敬的用户，",
+        "D71EGW": "Go+",
+        "0yPSCj": "高风险",
+        "n2HnVK": "如果您决定关闭 [检查安全] 应用，关闭后与任何有潜在风险的合约或地址进行互动时将无法看到相关安全提示。",
+        "5N3b5J": "市值",
+        "/giXwU": "中等风险",
+        "EMLHjH": "详细信息",
+        "6VJnE7": "注意：扫描检测可能无法保证100%准确。",
+        "Iu4Ja9": "请输入合约地址。",
+        "g2UNkE": "Powered by",
+        "AkfEpj": "找不到结果。它可能是由于网络错误、链上数据异常或 Token地址不存在。请检查以下情况：",
+        "ByAMF+": "风险提示",
+        "A1taO8": "搜索",
+        "Ah4d0u": "安全检测",
+        "es4h+b": "仍要兑换",
+        "sOYKMU": "[检查安全] 提供迅速、可靠和方便的 Web3 安全服务。",
+        "8N1Wbf": "此 Token 没有风险或关注因素。",
+        "HCKlXm": "Token 合约地址",
+        "daEP1M": "Token 信息",
+        "jJrqb1": "Token 名称",
+        "pzO3Xa": "总供应量",
+        "MEIAzV": "未命名的",
+        "Sjplg3": "在区块链浏览器查看",
+        "UpqenY": "We recommend new Web3 users to keep [Check Security] open."
+    }
+}
