--- a/packages/plugins/MaskBox/src/locale/ja-JP.po
+++ b/packages/plugins/MaskBox/src/locale/ja-JP.po
@@ -17,3 +17,65 @@ msgstr ""
 "X-Crowdin-Language: ja\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/MaskBox/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 974\n"
+
+#: src/SiteAdaptor/components/PreviewCard.tsx:376
+msgid "{boxStateMessage} ({0} {1}/Time)"
+msgstr ""
+
+#: src/SiteAdaptor/components/PreviewCard.tsx:330
+msgid "Active"
+msgstr "アクティブ"
+
+#: src/SiteAdaptor/components/PreviewCard.tsx:260
+msgid "Articles"
+msgstr "記事"
+
+#: src/SiteAdaptor/components/PreviewCard.tsx:316
+msgid "by"
+msgstr "によって"
+
+#: src/SiteAdaptor/components/PreviewCard.tsx:330
+msgid "Closed"
+msgstr "終了"
+
+#: src/SiteAdaptor/components/PreviewCard.tsx:264
+msgid "Details"
+msgstr "詳細"
+
+#: src/SiteAdaptor/components/DrawDialog.tsx:279
+msgid "Draw"
+msgstr "引く"
+
+#: src/SiteAdaptor/components/DrawDialog.tsx:278
+msgid "Drawing"
+msgstr "引く中"
+
+#: src/SiteAdaptor/components/DrawDialog.tsx:276
+msgid "Insufficient balance"
+msgstr "残高不足"
+
+#: src/SiteAdaptor/components/PreviewCard.tsx:304
+msgid "Limit:"
+msgstr "制限:"
+
+#: src/SiteAdaptor/components/PreviewCard.tsx:210
+#: src/SiteAdaptor/components/PreviewCard.tsx:235
+msgid "Load failed"
+msgstr "読み込みに失敗しました"
+
+#: src/SiteAdaptor/index.tsx:35
+msgid "MaskBox"
+msgstr "MaskBox"
+
+#: src/SiteAdaptor/index.tsx:55
+msgid "Professional multi-chain decentralized platform for launching NFT mystery boxes."
+msgstr "NFTのミステリーボックスを立ち上げるためのプロフェッショナルなマルチチェーン分散型プラットフォーム。"
+
+#: src/SiteAdaptor/components/PreviewCard.tsx:227
+#: src/SiteAdaptor/components/PreviewCard.tsx:252
+msgid "Reload"
+msgstr "再度読み込み"
+
+#: src/SiteAdaptor/components/PreviewCard.tsx:294
+msgid "Solid:"
+msgstr "安定した"
