--- a/packages/plugins/MaskBox/src/locale/ko-KR.json
+++ b/packages/plugins/MaskBox/src/locale/ko-KR.json
@@ -1,1 +1,19 @@
-{ "messages": {} }
+{
+    "messages": {
+        "Xmf1TZ": [["boxStateMessage"], " (", ["0"], " ", ["1"], "/Time)"],
+        "F6pfE9": "활성화",
+        "Tt5T6+": "아티클",
+        "Vi2Pqx": "by",
+        "D87pha": "종료됨",
+        "URmyfc": "디테일",
+        "2vTp2v": "뽑기",
+        "rFkZD1": "뽑는 중",
+        "znqB4T": "잔액 부족",
+        "ml4bvW": "제한:",
+        "0Lp4o6": "로딩 실패",
+        "WNjtSq": "MaskBox",
+        "ZQo3mO": "NFT 미스터리박스를 출시하는 멀티체인 탈중앙화 플랫폼",
+        "HpK/8d": "다시 로드",
+        "WbEaq/": "Solid:"
+    }
+}
