fix: mf-6379 skip 0 amount

--- a/packages/plugins/Trader/src/locale/en-US.json
+++ b/packages/plugins/Trader/src/locale/en-US.json
@@ -1,21 +1,31 @@
 {
     "messages": {
+        "v2rZrT": [["0"], " fee"],
+        "UO7xDp": [["0"], " Pool"],
+        "Yp8yB4": [["0"], " to ", ["1"]],
+        "ZSWUwq": [["0"], "m"],
         "IDd4f3": [
             ["gasOptionType", "select", { "slow": "Slow", "normal": "Average", "fast": "Fast", "custom": "Custom" }]
         ],
         "r3OcML": [["mins"], "min"],
+        "/hKQcr": [["seconds"], "s"],
         "RuO5md": [["seconds"], "sec"],
         "s3+dHe": "<0>Powered by<1/></0><2>OKX</2>",
         "BmN4Bk": "Aggregator",
         "j2Uisd": "Approving",
         "3uQmjD": "Average",
         "z7Fh2l": ["Base fee required: ", ["MIN_BASE_FEE"], " Gwei"],
+        "J24FyN": "Bridge",
+        "O3Nzf+": "Bridge between this token pair are't supported at the moment.",
+        "sX4+FS": "Bridge network fee",
         "aqop4L": "Check on Explorer",
         "rulocO": "Checking Approve",
         "bD8I7O": "Complete",
         "7VpPHA": "Confirm",
+        "Tuc34V": "Confirm Bridge",
         "lQ6r7x": "Confirm swap",
         "tbOs8j": "Confirm Swap",
+        "Xcy5sJ": "Cross-chain Swap",
         "8Tg/JR": "Custom",
         "HKH+W+": "Data",
         "mYGY3B": "Date",
@@ -24,13 +34,19 @@
         "Citz6F": "Exchange",
         "7Bj3x9": "Failed",
         "KziH2K": "Fast",
+        "pG7O41": "Fastest",
         "ejVYRQ": "From",
         "3kbpgO": "Gas Limit",
         "OLY2Jk": "Gas Price",
         "0caMy7": "History",
+        "lqW7eD": "In cross-chain transactions, this fee includes the estimated network fee and the cross-chain bridge's network fee which is $0.00 (0 OP_ETH). The network fees are paid to the miners and aren't charged by our platform.\nThe actual cost may be lower\nthan estimated, and any unused funds will remain in the original address.",
         "m3pz1u": ["Insufficient ", ["symbol"], " Balance"],
+        "RhCL4z": "Max amount",
         "T3EPqL": "Max base fee",
+        "HTX2HV": "Minimum received",
+        "OR475H": "Network",
         "y62Dys": "Network fee",
+        "ileX7U": "No recent transactions",
         "lO/vMB": "OKX DEX refers to the OKX DEX aggregator, which chooses the best route to place an order through all integrated third-party DEXs (some of them are shown below).  Note that OKX DEX derives all its liquidity from third-party liquidity pools. OKX DEX does NOT conduct any transactions directly.",
         "g2UNkE": "Powered by",
         "y/kxxM": "Priority fee",
@@ -56,6 +72,7 @@
         "iF9x7r": "Trading mode",
         "0fljZe": "Trading Route",
         "5HVoyc": "Transaction Details",
+        "X8N33g": "Transaction history is only stored locally and will be deleted if you clear your browser data.",
         "GrTvoo": "Transaction in progress. Thank you for your patience.",
         "g/i+bG": "Transaction rejected",
         "Re7Oex": "Transaction submitted.",
