refactor: migrate plugin Pets

--- a/packages/plugins/Pets/src/locale/en-US.json
+++ b/packages/plugins/Pets/src/locale/en-US.json
@@ -1,1 +1,21 @@
-{ "messages": {} }
+{
+    "messages": {
+        "CqKF4S": "(unverified)",
+        "7VpPHA": "Confirm",
+        "+2l/Ab": "Discover the infinite possibilities of #NFTs.",
+        "b2DQoU": "Greeting message",
+        "a/Fqol": "I just set up NFT personal image with @realMaskNetwork chrome extension. Visit my profile to check it out. Install Mask Network extension from mask.io and set yours.\n#mask_io #nonfungiblefriends\n⚙ Setting steps: https://x.com/NonFFriend/status/1508791087149641731",
+        "QiaLm+": "NFT Contract",
+        "Tqe05W": "Non-F Friends",
+        "LLjpHI": "Non-Fungible Friends",
+        "FlVvM+": "Optional, 100 characters max.",
+        "g2UNkE": "Powered by",
+        "rdUucN": "Preview",
+        "WG8BzT": "Setting failed, please try later",
+        "Z8lGw6": "Share",
+        "DvucqT": "Show NFT friends on the profile page.",
+        "olEUh2": "Successful",
+        "8glx+u": "Token ID",
+        "XoXqnO": "Your Non-Fungible Friend has been set up successfully."
+    }
+}
