--- a/packages/plugins/Pets/src/locale/ja-JP.json
+++ b/packages/plugins/Pets/src/locale/ja-JP.json
@@ -1,1 +1,21 @@
-{ "messages": {} }
+{
+    "messages": {
+        "CqKF4S": "(unverified)",
+        "7VpPHA": "確認",
+        "+2l/Ab": "#NFTs の無限の可能性を発見してください。",
+        "b2DQoU": "挨拶メッセージ",
+        "a/Fqol": "I just set up NFT personal image with @realMaskNetwork chrome extension. Visit my profile to check it out. Install Mask Network extension from mask.io and set yours.\n#mask_io #nonfungiblefriends\n⚙ Setting steps: https://x.com/NonFFriend/status/1508791087149641731",
+        "QiaLm+": "NFT 契約",
+        "Tqe05W": "ノンーF フレンド",
+        "LLjpHI": "ノンファンジブルな友達（かけがえのない友人）",
+        "FlVvM+": "任意、最大100文字まで。",
+        "g2UNkE": "以下により提供されています",
+        "rdUucN": "プレビュー",
+        "WG8BzT": "設定に失敗しました。後ほどお試しください。",
+        "Z8lGw6": "シェア",
+        "DvucqT": "プロフィールページに NFT の友達を表示する。",
+        "olEUh2": "成功しました",
+        "8glx+u": "トークンID",
+        "XoXqnO": "ノンファンジブルな友達が正常に設定されました。"
+    }
+}
