--- a/packages/plugins/Pets/src/locale/ko-KR.json
+++ b/packages/plugins/Pets/src/locale/ko-KR.json
@@ -1,1 +1,21 @@
-{ "messages": {} }
+{
+    "messages": {
+        "CqKF4S": "(unverified)",
+        "7VpPHA": "확인",
+        "+2l/Ab": "#NFT 무한한 가능성을 탐색합니다.",
+        "b2DQoU": "인사 메시지",
+        "a/Fqol": "I just set up NFT personal image with @realMaskNetwork chrome extension. Visit my profile to check it out. Install Mask Network extension from mask.io and set yours.\n#mask_io #nonfungiblefriends\n⚙ Setting steps: https://x.com/NonFFriend/status/1508791087149641731",
+        "QiaLm+": "NFT 컨트렉트",
+        "Tqe05W": "Non-F 친구",
+        "LLjpHI": "Non-Fungible Friends",
+        "FlVvM+": "최대 100 캐릭터를 선택할 수 있습니다.",
+        "g2UNkE": "기술 지원",
+        "rdUucN": "미리보기",
+        "WG8BzT": "설치 실패, 잠시 후 다시 시도하세요.",
+        "Z8lGw6": "공유",
+        "DvucqT": "프로필 페이지에서 전시하기",
+        "olEUh2": "성공",
+        "8glx+u": "토큰 ID",
+        "XoXqnO": "설치 성공"
+    }
+}
