refactor: migrate plugin ProfileCard

--- a/packages/plugins/ProfileCard/src/locale/ja-JP.json
+++ b/packages/plugins/ProfileCard/src/locale/ja-JP.json
@@ -1,1 +1,6 @@
-{ "messages": {} }
+{
+    "messages": {
+        "Cy19fm": "タイムラインのアバターやトークンタグの隅にあるミニMaskアイコンに合わせると、複数のアカウントのWeb3プロフィールが表示されます。",
+        "EGWr+Q": "Web3 プロフィールカード"
+    }
+}
