--- a/packages/plugins/ProfileCard/src/locale/en-US.json
+++ b/packages/plugins/ProfileCard/src/locale/en-US.json
@@ -1,1 +1,6 @@
-{ "messages": {} }
+{
+    "messages": {
+        "Cy19fm": "View multiple accounts Web3 profile by hovering over the mini Mask icon at the corner of Avatar or token tags in timeline.",
+        "EGWr+Q": "Web3 Profile Card"
+    }
+}
