--- a/packages/plugins/ProfileCard/src/locale/ko-KR.po
+++ b/packages/plugins/ProfileCard/src/locale/ko-KR.po
@@ -17,3 +17,11 @@ msgstr ""
 "X-Crowdin-Language: ko\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/ProfileCard/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 980\n"
+
+#: src/SiteAdaptor/index.tsx:17
+msgid "View multiple accounts Web3 profile by hovering over the mini Mask icon at the corner of Avatar or token tags in timeline."
+msgstr "아바타 오른쪽 아래에 있는 미니 Mask 아이콘이나 타임라인의 토큰 태그 위에 마우스를 올려놓아 여러 계정의 웹3 프로필을 볼 수 있습니다."
+
+#: src/SiteAdaptor/index.tsx:24
+msgid "Web3 Profile Card"
+msgstr "웹3 프로필 카드"
