--- a/packages/plugins/ProfileCard/src/locale/zh-CN.json
+++ b/packages/plugins/ProfileCard/src/locale/zh-CN.json
@@ -1,1 +1,6 @@
-{ "messages": {} }
+{
+    "messages": {
+        "Cy19fm": "鼠标悬停于头像右下角的 Mask 图标或时间线上的代币话题标签，浏览多元化账户的 Web3 足迹。",
+        "EGWr+Q": "Web3 名片"
+    }
+}
