--- a/packages/plugins/ProfileCard/src/locale/zh-CN.po
+++ b/packages/plugins/ProfileCard/src/locale/zh-CN.po
@@ -17,3 +17,11 @@ msgstr ""
 "X-Crowdin-Language: zh-CN\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/ProfileCard/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 980\n"
+
+#: src/SiteAdaptor/index.tsx:17
+msgid "View multiple accounts Web3 profile by hovering over the mini Mask icon at the corner of Avatar or token tags in timeline."
+msgstr "鼠标悬停于头像右下角的 Mask 图标或时间线上的代币话题标签，浏览多元化账户的 Web3 足迹。"
+
+#: src/SiteAdaptor/index.tsx:24
+msgid "Web3 Profile Card"
+msgstr "Web3 名片"
