refactor: migrate plugin RedPacket

--- a/packages/plugins/RedPacket/src/locale/ja-JP.json
+++ b/packages/plugins/RedPacket/src/locale/ja-JP.json
@@ -1,1 +1,129 @@
-{ "messages": {} }
+{
+    "messages": {
+        "DtZDW+": [["0"], " (UTC+8)"],
+        "oig90Q": ["すべて（", ["0"], " NFT）"],
+        "hehnjM": "量",
+        "Fgyfqo": "各金額",
+        "wGtbaw": "1株当たりの金額",
+        "W+lPUh": "受信者は最大255人です",
+        "AbR6G1": "添付メッセージ",
+        "dTgELI": "祝福語",
+        "Mh3RsB": "幸運を祈ります！",
+        "ihTzdK": "By clicking \"Next\", you acknowledge the risk associated with decentralized networks and beta products.",
+        "MpAucy": "コレクションを選択してください",
+        "hom7qf": "受取る",
+        "s13D96": "要件を要求する",
+        "hRWvpI": "受け取り済",
+        "bTp+bt": ["Claimed ", ["0"], "/", ["1"]],
+        "wNUf+h": ["1 ", ["0"], " を正常に請求しました。"],
+        "yDDOwl": ["Claimed 1 ", ["NFT"], " successfully."],
+        "N0tcou": "受け取り中..",
+        "s/KkfL": "すべての要件をクリアする",
+        "DoJzLz": "コレクション",
+        "NBdIgR": "コメント",
+        "qqWcBV": "完了しました",
+        "7VpPHA": "確認",
+        "B1T4nn": "ラッキードロップを確認する",
+        "P+K/3O": "確認中",
+        "TyF6nf": ["Connect to ", ["0"]],
+        "CtByM7": "ウォレットに接続",
+        "PLWaf6": "ラッキードロップを作成します。",
+        "nzBzok": "作成時間:",
+        "y2aRC+": "作成者",
+        "oLnk2n": "Lucky Drop送信者をカスタマイズします。レンズまたはForecasterユーザー名を選択するか、現在接続されているウォレットを使用してください。",
+        "Zg6RWT": "ドロップ種別",
+        "N2S1rs": "空です",
+        "SK/M8W": "メッセージを閉じる",
+        "heVBR8": "各金額を入力",
+        "MwLgB9": "入賞者数を入力してください",
+        "lxJU2w": "共有を入力",
+        "dTHM4U": "各勝者が受け取れる金額を入力してください",
+        "NfxOUe": "合計入力",
+        "YLObqx": "等しい金額",
+        "M1RnFv": "期限切れ",
+        "TvMDGM": "今すぐフォロー",
+        "O/GjWq": ["From: @", ["0"]],
+        "Wy16g8": "暗号資産またはNFTをすべてのユーザーに贈り、先着順に提供します。",
+        "SIrUT3": [
+            ["0"],
+            " にラッキードロップスマートコントラクトへのアクセスを許可します。トークンごとに1回だけ行う必要があります"
+        ],
+        "0caMy7": "履歴",
+        "9r9nwF": "同じ",
+        "4UmwEM": "画像プレビュー",
+        "H1v3zR": [["0"], " 残高不足"],
+        "N2DUxS": "残高不足",
+        "a4C0ak": "ガス料金が足りません",
+        "6YASel": "無効なネットワーク",
+        "W9FRBT": "いいね",
+        "OJUMlR": "いいね/リポスト/コメント",
+        "0+plfy": "トークンを読み込み中...",
+        "If2v4h": "ラッキードロップ",
+        "HsoakN": "masknetwork",
+        "xDAtGP": "メッセージ",
+        "LEbOpR": "詳細",
+        "hXzOVo": "次へ",
+        "lISnKy": "NFT ホルダー",
+        "8Dh77Z": "NFTs",
+        "1UzENP": "いいえ",
+        "olT7qF": "このラッキードロップの請求はまだありません。",
+        "0oFu/K": "獲得したラッキードロップはありません。",
+        "Ev2r9A": "該当なし",
+        "AuXfDa": "Note: When you \"Unlock All\", all of the NFTs in the collection will be by default authorized for sale. This includes the NFTs transferred afterwards.",
+        "rl4E61": "当選者数",
+        "dJAg3j": "投稿先:",
+        "ofUcbc": "ランダム",
+        "KPUGxy": "ランダム金額",
+        "nVT2pJ": "realMaskNetwork",
+        "fZ5Vnu": "獲得済み",
+        "aLc9As": "受け取り時刻",
+        "J0LAHU": "返金",
+        "GShMK6": "返金処理中",
+        "mkude1": "リポスト",
+        "QuBpLd": "必要条件",
+        "A1taO8": "検索",
+        "/y/pZ3": "トークンを選択してください",
+        "mCB6Je": "全て選ぶ",
+        "8ZgUhU": "ゲートにアクセスするNFTコレクションを選択します",
+        "xkpiw9": "一部を選択",
+        "JlFcis": "送る",
+        "CSR5gP": "サプライズ暗号のプレゼントを送信します。複数のチェーンのトークンとNFTが対応されています。",
+        "h69WC6": "送信",
+        "Z8lGw6": "共有",
+        "hPIX+D": "共有先",
+        "kf83Ld": "問題が発生しました.",
+        "QF9SdB": "分割モード",
+        "2z+RJ9": "ラッキードロップはデータの損傷のため送信できません。",
+        "kNHQXd": "ラッキードロップは返金されました。",
+        "hdmRb+": "ラッキードロップが壊れています。",
+        "gPL7RI": "ラッキードロップは空です。",
+        "XCpVdp": "ラッキードロップの有効期限が切れています。",
+        "51cT/A": ["The minimum amount for each share is ", ["0"], " ", ["1"]],
+        "QH3LZ+": "トークンIDはカンマで区切られています。例: 1224, 7873, 8948",
+        "6RDwJM": "トークン",
+        "V6wYl1": "合計金額",
+        "NrYZ3H": "合計金額",
+        "MsYkNH": "受賞者の合計金額",
+        "hg5QeV": "合計額",
+        "p7luEI": "ラッキードロップクエストを使用してフォロワーとエンゲージメントを成長させましょう。各要件をクリアすると、要求を受けることができます。",
+        "Zslc4B": "ユーザーはアカウントをフォローする必要があります。注意: 複数のソーシャルネットワークにラッキードロップを投稿する場合、ソーシャルネットワークをフォローすると、ユーザーが請求することができます。",
+        "zW0kwR": "ユーザーは選択したコレクションから1つのNFTを保持する必要があります。",
+        "BYZ6zX": "ユーザーは、あなたのラッキードロップの投稿に「いいね！」、リポスト/引用ツイート、コメントをしなければなりません。",
+        "jpctdh": "表示",
+        "7tYPrA": "ウォレットアカウント",
+        "wQrah8": [
+            "NFTを選択しすぎる場合、合計ガス料金がメタマスク限度1 ",
+            ["0"],
+            "を超えることがあります。選択したNFTの数を減らしてください。"
+        ],
+        "GRLMKx": "当選者",
+        "p1L+er": "1つまたは複数のルールを設定して、Lucky Dropを獲得することができます。",
+        "rkVh+N": "このラッキードロップを送信すると、請求されていない金額を24時間後に引き出すことができます。",
+        "LQtEHu": "残りの残高は、送金後24時間後に引き出すことができます。",
+        "ps4YUr": ["あなたは ", ["0"], " ", ["1"], " を獲得しました"],
+        "Z+6iux": ["You claimed ", ["1"], " {}."],
+        "nJMj1z": [["0"], " ", ["1"], " を返金することができます。"],
+        "0UMPI1": ["You got 1 ", ["0"]],
+        "kX8xzI": "まだNFTラッキードロップを作成していません。友達とラッキーを共有してみてください。"
+    }
+}
