--- a/packages/plugins/RedPacket/src/locale/ko-KR.json
+++ b/packages/plugins/RedPacket/src/locale/ko-KR.json
@@ -1,1 +1,130 @@
-{ "messages": {} }
+{
+    "messages": {
+        "DtZDW+": [["0"], " (UTC+8)"],
+        "oig90Q": ["모든 (", ["0"], " NFT)"],
+        "hehnjM": "Amount",
+        "Fgyfqo": "하나의 금액",
+        "wGtbaw": "한 지분 금액",
+        "W+lPUh": "최대 255명까지 받을 수 있습니다",
+        "AbR6G1": "첨부 메시지",
+        "dTgELI": "덕담",
+        "Mh3RsB": "행운을 빌어요!",
+        "ihTzdK": "By clicking \"Next\", you acknowledge the risk associated with decentralized networks and beta products.",
+        "MpAucy": "수집품 선택",
+        "hom7qf": "수령",
+        "s13D96": "Claim Requirements",
+        "hRWvpI": "Claimed",
+        "bTp+bt": ["Claimed ", ["0"], "/", ["1"]],
+        "wNUf+h": [["0"], " 1 개가 수령되었습니다."],
+        "yDDOwl": ["Claimed 1 ", ["NFT"], " successfully."],
+        "N0tcou": "수령 중...",
+        "s/KkfL": "Clear all requirements",
+        "DoJzLz": "수집품",
+        "NBdIgR": "Comment",
+        "qqWcBV": "완료됨",
+        "7VpPHA": "확인",
+        "B1T4nn": "행운 드랍 디테일",
+        "P+K/3O": "확인 중",
+        "TyF6nf": ["Connect to ", ["0"]],
+        "CtByM7": "월렛 연결",
+        "PLWaf6": "다음",
+        "nzBzok": "생성 시간:",
+        "y2aRC+": "Creator:",
+        "oLnk2n": "Customize Lucky Drop sender. Select either Lens or Forecaster usernames, or use the currently connected wallet.",
+        "Zg6RWT": "Drop Type",
+        "N2S1rs": "비어 있음",
+        "SK/M8W": "메시지 동봉",
+        "heVBR8": "하나의 금액 입력",
+        "MwLgB9": "Enter number of winners",
+        "lxJU2w": "공유 수량 입력",
+        "dTHM4U": "Enter the amount that each winner can claim",
+        "NfxOUe": "총금액 입력",
+        "YLObqx": "동일한 금액",
+        "M1RnFv": "만료됨",
+        "TvMDGM": "Follow me",
+        "O/GjWq": ["From: @", ["0"]],
+        "Wy16g8": "크립토나 NFT를 다른 이용자에게 보낼 수 있습니다.",
+        "SIrUT3": [
+            "Grant access to your ",
+            ["0"],
+            " for the Lucky Drop Smart contract. You only have to do this once per token."
+        ],
+        "0caMy7": "역사 기록",
+        "9r9nwF": "평균",
+        "4UmwEM": "Image Preview",
+        "H1v3zR": [["0"], " 잔액 부족"],
+        "N2DUxS": "잔액 부족",
+        "a4C0ak": "가스비 부족",
+        "6YASel": "잘못된 네트워크",
+        "W9FRBT": "Like",
+        "OJUMlR": "Like / Repost / Comment",
+        "0+plfy": "토큰 로딩...",
+        "If2v4h": "행운 드랍",
+        "HsoakN": "masknetwork",
+        "xDAtGP": "Message",
+        "LEbOpR": "More details",
+        "hXzOVo": "Next",
+        "lISnKy": "NFT holder",
+        "8Dh77Z": "NFTs",
+        "1UzENP": "No",
+        "olT7qF": "No claims yet for this Lucky Drop",
+        "0oFu/K": "No Lucky Drops claimed",
+        "Ev2r9A": "결과 없음",
+        "AuXfDa": "Note: When you \"Unlock All\", all of the NFTs in the collection will be by default authorized for sale. This includes the NFTs transferred afterwards.",
+        "rl4E61": "Number of Winners",
+        "dJAg3j": "Post on",
+        "ofUcbc": "렌덤",
+        "KPUGxy": "랜덤 금액",
+        "nVT2pJ": "realMaskNetwork",
+        "fZ5Vnu": "Received",
+        "aLc9As": "Received time:",
+        "J0LAHU": "리펀",
+        "GShMK6": "환급 중",
+        "mkude1": "Repost",
+        "QuBpLd": "Requirements",
+        "A1taO8": "검색",
+        "/y/pZ3": "토큰 선택",
+        "mCB6Je": "전체 선택",
+        "8ZgUhU": "Select NFT collection to gate access",
+        "xkpiw9": "일부 선택",
+        "JlFcis": "발송",
+        "CSR5gP": "사프라이즈 트큰과 NFT 선물을 보내세요. 다양한 체인을 지원합니다.",
+        "h69WC6": "Sent",
+        "Z8lGw6": "공유",
+        "hPIX+D": "Share From",
+        "kf83Ld": "오류가 발생합니다.",
+        "QF9SdB": "스플릿 모드",
+        "2z+RJ9": "테이터 훼손때문에 행운 드랍을 보낼 수 없습니다.",
+        "kNHQXd": "행운 드랍은 이미 리펀됩니다.",
+        "hdmRb+": "훼손된 행운 드랍",
+        "gPL7RI": "비어 있는 행운 드랍",
+        "XCpVdp": "만료된 행운 드랍",
+        "51cT/A": ["The minimum amount for each share is ", ["0"], " ", ["1"]],
+        "QH3LZ+": "토큰 ID는 쉽표로 분리됩니다. 예시: 1224, 7873, 8948",
+        "6RDwJM": "토큰",
+        "V6wYl1": "Total amount",
+        "NrYZ3H": "총액",
+        "MsYkNH": "Total amount shared among all winners",
+        "hg5QeV": "총 비용",
+        "p7luEI": "Use Lucky Drop quests to grow your followers and engagement. Each requirement must be completed to be eligible to claim.",
+        "Zslc4B": "User must follow your account. Note: When you cross-post a Lucky Drop to multiple social networks, following you on any social allows users to claim.",
+        "zW0kwR": "Users must hold one NFT from the collection you select.",
+        "BYZ6zX": "Users must like, repost / quote tweet, or comment on your Lucky Drop post.",
+        "jpctdh": "View",
+        "7tYPrA": "월렛 계정",
+        "wQrah8": [
+            "NFT를 너무 많이 선택할 경우 총 가스 요금이 MetaMask 한도인 1 ",
+            ["0"],
+            " 을(를) 초과할 수 있습니다. 선택한 NFT 수를 줄이세요."
+        ],
+        "GRLMKx": "Winners",
+        "p1L+er": "You can set one or multiple rules to be eligible to win a Lucky Drop.",
+        "rkVh+N": "You can withdraw any unclaimed amount 24 hours after sending this lucky drop.",
+        "LQtEHu": "행운 드롭을 발송한 후 24시간 후에 남은 자금을 인출할 수 있습니다.",
+        "ps4YUr": [["0"], " ", ["1"], " 수령되었습니다."],
+        "Z+6iux": ["You claimed ", ["1"], " {}."],
+        "nJMj1z": [["0"], " ", ["1"], " 리펀 가능합니다."],
+        "0UMPI1": ["You got 1 ", ["0"]],
+        "kX8xzI": "생성된 NFT 행운 드랍이 없습니다. 행운 드랍을 만들고 친구들에게 행운을 공유하세요."
+    }
+}
