--- a/packages/plugins/RedPacket/src/locale/zh-TW.json
+++ b/packages/plugins/RedPacket/src/locale/zh-TW.json
@@ -1,1 +1,126 @@
-{ "messages": {} }
+{
+    "messages": {
+        "DtZDW+": [["0"], " (UTC+8)"],
+        "oig90Q": ["全部 (", ["0"], " NFT)"],
+        "hehnjM": "Amount",
+        "Fgyfqo": "每个金额",
+        "wGtbaw": "单个红包数额",
+        "W+lPUh": "最多255个领取者",
+        "AbR6G1": "附加的訊息",
+        "dTgELI": "祝福语",
+        "Mh3RsB": "最好的祝福！",
+        "ihTzdK": "By clicking \"Next\", you acknowledge the risk associated with decentralized networks and beta products.",
+        "MpAucy": "选择您的 NFT 系列",
+        "hom7qf": "認領",
+        "s13D96": "Claim Requirements",
+        "hRWvpI": "Claimed",
+        "bTp+bt": ["Claimed ", ["0"], "/", ["1"]],
+        "wNUf+h": ["成功领取了 1 ", ["0"], "。"],
+        "yDDOwl": ["Claimed 1 ", ["NFT"], " successfully."],
+        "N0tcou": "認領中...",
+        "s/KkfL": "Clear all requirements",
+        "DoJzLz": "NFT 系列",
+        "NBdIgR": "Comment",
+        "qqWcBV": "已完成",
+        "7VpPHA": "确定",
+        "B1T4nn": "紅包詳情",
+        "P+K/3O": "确认中",
+        "TyF6nf": ["Connect to ", ["0"]],
+        "CtByM7": "连接钱包",
+        "PLWaf6": "下一步",
+        "nzBzok": "创建时间：",
+        "y2aRC+": "Creator:",
+        "oLnk2n": "Customize Lucky Drop sender. Select either Lens or Forecaster usernames, or use the currently connected wallet.",
+        "Zg6RWT": "Drop Type",
+        "N2S1rs": "空的",
+        "SK/M8W": "標題",
+        "heVBR8": "输入每个金额",
+        "MwLgB9": "Enter number of winners",
+        "lxJU2w": "输入份数",
+        "dTHM4U": "Enter the amount that each winner can claim",
+        "NfxOUe": "输入总数",
+        "YLObqx": "均分金额",
+        "M1RnFv": "已過期",
+        "TvMDGM": "Follow me",
+        "O/GjWq": ["From: @", ["0"]],
+        "Wy16g8": "给任意用户发送Token或者NFT，先到先得",
+        "SIrUT3": [
+            "Grant access to your ",
+            ["0"],
+            " for the Lucky Drop Smart contract. You only have to do this once per token."
+        ],
+        "0caMy7": "历史",
+        "9r9nwF": "平分",
+        "4UmwEM": "Image Preview",
+        "H1v3zR": [["0"], " 余额不足"],
+        "N2DUxS": "餘額不足",
+        "a4C0ak": "没有足够的 Gas 费",
+        "6YASel": "网络无效",
+        "W9FRBT": "Like",
+        "OJUMlR": "Like / Repost / Comment",
+        "0+plfy": "正在加载代币...",
+        "If2v4h": "红包",
+        "HsoakN": "masknetwork",
+        "xDAtGP": "Message",
+        "LEbOpR": "More details",
+        "hXzOVo": "Next",
+        "lISnKy": "NFT holder",
+        "8Dh77Z": "NFTs",
+        "1UzENP": "No",
+        "olT7qF": "No claims yet for this Lucky Drop",
+        "0oFu/K": "No Lucky Drops claimed",
+        "Ev2r9A": "没有任何结果。",
+        "AuXfDa": "Note: When you \"Unlock All\", all of the NFTs in the collection will be by default authorized for sale. This includes the NFTs transferred afterwards.",
+        "rl4E61": "Number of Winners",
+        "dJAg3j": "Post on",
+        "ofUcbc": "随机",
+        "KPUGxy": "随机金额",
+        "nVT2pJ": "realMaskNetwork",
+        "fZ5Vnu": "Received",
+        "aLc9As": "Received time:",
+        "J0LAHU": "退款",
+        "GShMK6": "退款中",
+        "mkude1": "Repost",
+        "QuBpLd": "Requirements",
+        "A1taO8": "搜尋",
+        "/y/pZ3": "选择代币",
+        "mCB6Je": "全选",
+        "8ZgUhU": "Select NFT collection to gate access",
+        "xkpiw9": "选择部分",
+        "JlFcis": "发送",
+        "CSR5gP": "发送一个惊喜的加密货币红包。支持多个链上的代币和 NFT。",
+        "h69WC6": "Sent",
+        "Z8lGw6": "分享",
+        "hPIX+D": "Share From",
+        "kf83Ld": "出现了一些问题。",
+        "QF9SdB": "拆分模式",
+        "2z+RJ9": "由于数据损坏，红包无法发送。",
+        "kNHQXd": "此红包已退款。",
+        "hdmRb+": "此红包已被损坏。",
+        "gPL7RI": "此红包是空的。",
+        "XCpVdp": "此红包已过期。",
+        "51cT/A": ["The minimum amount for each share is ", ["0"], " ", ["1"]],
+        "QH3LZ+": "Token ID可用逗号分隔，例如：1224, 7873",
+        "6RDwJM": "代幣",
+        "V6wYl1": "Total amount",
+        "NrYZ3H": "總額",
+        "MsYkNH": "Total amount shared among all winners",
+        "hg5QeV": "总花费",
+        "p7luEI": "Use Lucky Drop quests to grow your followers and engagement. Each requirement must be completed to be eligible to claim.",
+        "Zslc4B": "User must follow your account. Note: When you cross-post a Lucky Drop to multiple social networks, following you on any social allows users to claim.",
+        "zW0kwR": "Users must hold one NFT from the collection you select.",
+        "BYZ6zX": "Users must like, repost / quote tweet, or comment on your Lucky Drop post.",
+        "jpctdh": "View",
+        "7tYPrA": "钱包账户",
+        "wQrah8": ["当选择过多的 NFT时，总气费可能超过 1 ", ["0"], " 的 Metamask 限制。请减少选中的 NFT数量。"],
+        "GRLMKx": "Winners",
+        "p1L+er": "You can set one or multiple rules to be eligible to win a Lucky Drop.",
+        "rkVh+N": "You can withdraw any unclaimed amount 24 hours after sending this lucky drop.",
+        "LQtEHu": "您可以在发送红包24小时后提取红包余额。",
+        "ps4YUr": ["你领取了", ["0"], " ", ["1"], "。"],
+        "Z+6iux": ["You claimed ", ["1"], " {}."],
+        "nJMj1z": ["您可以退款 ", ["0"], " ", ["1"], "。"],
+        "0UMPI1": ["You got 1 ", ["0"]],
+        "kX8xzI": "您还没有创建任何NFT红包。尝试创建红包并与您的朋友分享。"
+    }
+}
