--- a/packages/plugins/RedPacket/src/locale/en-US.json
+++ b/packages/plugins/RedPacket/src/locale/en-US.json
@@ -1,1 +1,130 @@
-{ "messages": {} }
+{
+    "messages": {
+        "DtZDW+": [["0"], " (UTC+8)"],
+        "oig90Q": ["ALL (", ["0"], " NFT)"],
+        "hehnjM": "Amount",
+        "Fgyfqo": "Amount Each",
+        "wGtbaw": "Amount per Share",
+        "W+lPUh": "At most 255 recipients",
+        "AbR6G1": "Attached Message",
+        "dTgELI": "Best Wishes",
+        "Mh3RsB": "Best Wishes!",
+        "ihTzdK": "By clicking \"Next\", you acknowledge the risk associated with decentralized networks and beta products.",
+        "MpAucy": "Choose your collection",
+        "hom7qf": "Claim",
+        "s13D96": "Claim Requirements",
+        "hRWvpI": "Claimed",
+        "bTp+bt": ["Claimed ", ["0"], "/", ["1"]],
+        "wNUf+h": ["Claimed 1 ", ["0"], " successfully."],
+        "yDDOwl": ["Claimed 1 ", ["NFT"], " successfully."],
+        "N0tcou": "Claiming...",
+        "s/KkfL": "Clear all requirements",
+        "DoJzLz": "Collections",
+        "NBdIgR": "Comment",
+        "qqWcBV": "Completed",
+        "7VpPHA": "Confirm",
+        "B1T4nn": "Confirm the Lucky Drop",
+        "P+K/3O": "Confirming",
+        "TyF6nf": ["Connect to ", ["0"]],
+        "CtByM7": "Connect Wallet",
+        "PLWaf6": "Create the Lucky Drop",
+        "nzBzok": "Create time:",
+        "y2aRC+": "Creator:",
+        "oLnk2n": "Customize Lucky Drop sender. Select either Lens or Forecaster usernames, or use the currently connected wallet.",
+        "Zg6RWT": "Drop Type",
+        "N2S1rs": "Empty",
+        "SK/M8W": "Enclose a Message",
+        "heVBR8": "Enter Amount Each",
+        "MwLgB9": "Enter number of winners",
+        "lxJU2w": "Enter Number of Winners",
+        "dTHM4U": "Enter the amount that each winner can claim",
+        "NfxOUe": "Enter Total Amount",
+        "YLObqx": "Equal Amount",
+        "M1RnFv": "Expired",
+        "TvMDGM": "Follow me",
+        "O/GjWq": ["From: @", ["0"]],
+        "Wy16g8": "Gift crypto or NFTs to any users, first come, first served.",
+        "SIrUT3": [
+            "Grant access to your ",
+            ["0"],
+            " for the Lucky Drop Smart contract. You only have to do this once per token."
+        ],
+        "0caMy7": "History",
+        "9r9nwF": "Identical",
+        "4UmwEM": "Image Preview",
+        "H1v3zR": ["Insufficient ", ["0"], " Balance"],
+        "N2DUxS": "Insufficient Balance",
+        "a4C0ak": "Insufficient Balance for Gas Fee",
+        "6YASel": "Invalid Network",
+        "W9FRBT": "Like",
+        "OJUMlR": "Like / Repost / Comment",
+        "0+plfy": "Loading token...",
+        "If2v4h": "Lucky Drop",
+        "HsoakN": "masknetwork",
+        "xDAtGP": "Message",
+        "LEbOpR": "More details",
+        "hXzOVo": "Next",
+        "lISnKy": "NFT holder",
+        "8Dh77Z": "NFTs",
+        "1UzENP": "No",
+        "olT7qF": "No claims yet for this Lucky Drop",
+        "0oFu/K": "No Lucky Drops claimed",
+        "Ev2r9A": "No results",
+        "AuXfDa": "Note: When you \"Unlock All\", all of the NFTs in the collection will be by default authorized for sale. This includes the NFTs transferred afterwards.",
+        "rl4E61": "Number of Winners",
+        "dJAg3j": "Post on",
+        "ofUcbc": "Random",
+        "KPUGxy": "Random Amount",
+        "nVT2pJ": "realMaskNetwork",
+        "fZ5Vnu": "Received",
+        "aLc9As": "Received time:",
+        "J0LAHU": "Refund",
+        "GShMK6": "Refunding",
+        "mkude1": "Repost",
+        "QuBpLd": "Requirements",
+        "A1taO8": "Search",
+        "/y/pZ3": "Select a Token",
+        "mCB6Je": "Select All",
+        "8ZgUhU": "Select NFT collection to gate access",
+        "xkpiw9": "Select partially",
+        "JlFcis": "Send",
+        "CSR5gP": "Send a surprise crypto giveaway. Tokens and NFTs on multiple chains are supported.",
+        "h69WC6": "Sent",
+        "Z8lGw6": "Share",
+        "hPIX+D": "Share From",
+        "kf83Ld": "Something went wrong.",
+        "QF9SdB": "Split Mode",
+        "2z+RJ9": "The Lucky Drop can’t be sent due to data damage.",
+        "kNHQXd": "The Lucky Drop has been refunded.",
+        "hdmRb+": "The Lucky Drop is broken.",
+        "gPL7RI": "The Lucky Drop is empty.",
+        "XCpVdp": "The Lucky Drop is expired.",
+        "51cT/A": ["The minimum amount for each share is ", ["0"], " ", ["1"]],
+        "QH3LZ+": "Token ID separated by comma, e.g. 1224, 7873, 8948",
+        "6RDwJM": "Tokens",
+        "V6wYl1": "Total amount",
+        "NrYZ3H": "Total Amount",
+        "MsYkNH": "Total amount shared among all winners",
+        "hg5QeV": "Total cost",
+        "p7luEI": "Use Lucky Drop quests to grow your followers and engagement. Each requirement must be completed to be eligible to claim.",
+        "Zslc4B": "User must follow your account. Note: When you cross-post a Lucky Drop to multiple social networks, following you on any social allows users to claim.",
+        "zW0kwR": "Users must hold one NFT from the collection you select.",
+        "BYZ6zX": "Users must like, repost / quote tweet, or comment on your Lucky Drop post.",
+        "jpctdh": "View",
+        "7tYPrA": "Wallet account",
+        "wQrah8": [
+            "When selecting too many NFTs, the total gas fee may exceed the MetaMask limit of 1 ",
+            ["0"],
+            ". Please reduce the number of NFTs selected."
+        ],
+        "GRLMKx": "Winners",
+        "p1L+er": "You can set one or multiple rules to be eligible to win a Lucky Drop.",
+        "rkVh+N": "You can withdraw any unclaimed amount 24 hours after sending this lucky drop.",
+        "LQtEHu": "You can withdraw the rest of your balances back 24h later after sending them out.",
+        "ps4YUr": ["You claimed ", ["0"], " ", ["1"], "."],
+        "Z+6iux": ["You claimed ", ["1"], " {}."],
+        "nJMj1z": ["You could refund ", ["0"], " ", ["1"], "."],
+        "0UMPI1": ["You got 1 ", ["0"]],
+        "kX8xzI": "You haven't created any NFT lucky drop yet. Try to create and share lucky with your friends."
+    }
+}
