refactor: migrate plugin ScamWarning

--- a/packages/plugins/ScamWarning/src/locale/en-US.json
+++ b/packages/plugins/ScamWarning/src/locale/en-US.json
@@ -1,1 +1,6 @@
-{ "messages": {} }
+{
+    "messages": {
+        "n+ObkB": "Detecting whether user-published crypto websites are risky or malicious. Help to save your digital assets.",
+        "jt/cjR": "Safety Warning"
+    }
+}
