--- a/packages/plugins/ScamWarning/src/locale/ja-JP.json
+++ b/packages/plugins/ScamWarning/src/locale/ja-JP.json
@@ -1,1 +1,6 @@
-{ "messages": {} }
+{
+    "messages": {
+        "n+ObkB": "ユーザーが公開した暗号化ウェブサイトが危険か悪意のあるものかを検出します。デジタル資産を保存するのに役立ちます。",
+        "jt/cjR": "安全警告"
+    }
+}
