--- a/packages/plugins/ScamWarning/src/locale/ja-JP.po
+++ b/packages/plugins/ScamWarning/src/locale/ja-JP.po
@@ -17,3 +17,11 @@ msgstr ""
 "X-Crowdin-Language: ja\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/ScamWarning/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 990\n"
+
+#: src/SiteAdaptor/index.tsx:23
+msgid "Detecting whether user-published crypto websites are risky or malicious. Help to save your digital assets."
+msgstr "ユーザーが公開した暗号化ウェブサイトが危険か悪意のあるものかを検出します。デジタル資産を保存するのに役立ちます。"
+
+#: src/SiteAdaptor/index.tsx:21
+msgid "Safety Warning"
+msgstr "安全警告"
