--- a/packages/plugins/ScamWarning/src/locale/ko-KR.json
+++ b/packages/plugins/ScamWarning/src/locale/ko-KR.json
@@ -1,1 +1,6 @@
-{ "messages": {} }
+{
+    "messages": {
+        "n+ObkB": "사용자가 게시한 암호화 웹 사이트가 위험한지 악의적인지 탐지합니다. 디지털 자산을 저장하는 데 도움이 됩니다.",
+        "jt/cjR": "안전 경고"
+    }
+}
