--- a/packages/plugins/ScamWarning/src/locale/zh-CN.po
+++ b/packages/plugins/ScamWarning/src/locale/zh-CN.po
@@ -17,3 +17,11 @@ msgstr ""
 "X-Crowdin-Language: zh-CN\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/ScamWarning/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 990\n"
+
+#: src/SiteAdaptor/index.tsx:23
+msgid "Detecting whether user-published crypto websites are risky or malicious. Help to save your digital assets."
+msgstr "检测用户发布的加密网站是否有风险或恶意。帮助您保护数字资产。"
+
+#: src/SiteAdaptor/index.tsx:21
+msgid "Safety Warning"
+msgstr "安全警告"
