--- a/packages/plugins/Trader/src/locale/ja-JP.json
+++ b/packages/plugins/Trader/src/locale/ja-JP.json
@@ -72,6 +72,7 @@
         "rqV4QH": "This swap isn’t supported",
         "/jQctM": "To",
         "iF9x7r": "Trading mode",
+        "I7z//Y": "Trading route",
         "0fljZe": "Trading Route",
         "5HVoyc": "Transaction Details",
         "X8N33g": "Transaction history is only stored locally and will be deleted if you clear your browser data.",
